--- a/action.yml
+++ b/action.yml
@@ -5,23 +5,5 @@ inputs:
     description: 'Tarantool version'
     default: '2.5'
 runs:
-  using: 'composite'
-  steps:
-    - shell: bash
-      env:
-        BASEURL: "https://download.tarantool.org/tarantool/release"
-      run: |
-        set -x
-        curl ${{ env.BASEURL }}/${{ inputs.tarantool-version }}/gpgkey | sudo apt-key add -
-        sudo rm -f /etc/apt/sources.list.d/*tarantool*.list
-        sudo tee /etc/apt/sources.list.d/tarantool.list << REPO
-          deb ${{ env.BASEURL }}/${{ inputs.tarantool-version }}/ubuntu/ $(lsb_release -s -c) main
-        REPO
-
-    - shell: bash
-      run: sudo apt-get update
-
-    - shell: bash
-      run: sudo apt-get install -y tarantool tarantool-dev
-
-
+  using: 'node12'
+  main: dist/main/index.js
