--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
     "esModuleInterop": true,
     "module": "commonjs",
     "strict": true,
-    "target": "es6",
-    "lib": ["es6"],
+    "target": "ES2019",
     "outDir": "./lib",
     "rootDir": "./src",
   },
