--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/main/index.js",
   "scripts": {
     "tsc": "tsc && ncc build src/main.ts -o dist/main",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --write **/*.ts"
   },
   "repository": {
     "type": "git",
@@ -22,10 +22,12 @@
     "@actions/cache": "^1.0.4",
     "@actions/core": "^1.2.6",
     "@actions/exec": "^1.0.4",
-    "@actions/github": "^4.0.0"
+    "@actions/github": "^4.0.0",
+    "@actions/http-client": "^1.0.9"
   },
   "devDependencies": {
     "@zeit/ncc": "^0.22.3",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.2"
   }
 }
