--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@actions/http-client": "^1.0.9"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.22.3",
+    "@vercel/ncc": "^0.33.1",
     "prettier": "^2.2.1",
     "typescript": "^4.1.2"
   }
