feature: support 2.10+ releases
## Background

The new release policy (see [1]) is in effect since Tarantool 2.10 and
changes several things, including:

1. Repositories layout.
   - The new release series naming: `series-2` instead of `2.10`, `2.11`
     and so on.
   - The new `pre-release` repository.
   - No nightly builds (`live` repository).
2. Versioning.
   - Three digit versions for release builds: `2.10.0` instead of
     `2.10.0.0`.
   - `alpha`, `beta`, `rc` marks in pre-release tarantool versions.

[1]: https://github.com/tarantool/tarantool/discussions/6182

## Usage

This commit offers support of 2.10+ *releases* and leaves pre-releases
unsupported (it is tracked in #23).

The usage is quite straightforward:

```yaml
steps:
  - uses: actions/checkout@v2
  - uses: tarantool/setup-tarantool@v1
    with:
      tarantool-version: '2.10.0' # or '2.10', or just '2'
```

The latest 2.10.X version will be installed for
`tarantool-version: '2.10'`. The latest 2.X.Y version will be
installed for `tarantool-version: '2'`.

## Implementatoin details

We have nothing to do regarding versioning in order to support 2.10+
*releases*. However we should reflect the repository layout change:

* tarantool-version: 2.8, nightly-build: false or unset

  (Nothing is changed here.)

  ```
  baseUrl: https://download.tarantool.org/tarantool/release/2.8
  ```
* tarantool-version: 2.8, nightly-build: true

  (Nothing is changed here.)

  ```
  baseUrl: https://download.tarantool.org/tarantool/2.8
  ```
* tarantool-version: 2.10, nightly-build: false or unset

  (This is the new logic introduced by this commit.)

  ```
  baseUrl: https://download.tarantool.org/tarantool/release/series-2
  ```
* tarantool-version: 2.10, nightly-build: true

  (This is the new logic introduced by this commit.)

  Raise an error.

If the version is set as `'2'` or `'2.10.0'`, use the same logic as for
`'2.10'`.

Fixes #19

--- a/.github/actions/latest-version/action.yml
+++ b/.github/actions/latest-version/action.yml
@@ -24,6 +24,12 @@
 #   # ---> 1.10.13-0
 #   - run: echo ${{ steps.latest-version.outputs.git-describe }}
 #   # ---> 1.10.13-0-g1d2c5aad5
+#
+# Caution: It works smoothly only for 1.10/2.8, but not for 2.10+
+# due to changes in the package versioning (see the new release
+# policy document, [1]).
+#
+# [1]: https://github.com/tarantool/tarantool/discussions/6182
 
 name: 'Latest tarantool version'
 description: 'Get latest tarantool version of given release series'
