--- a/.github/actions/latest-version/action.yml
+++ b/.github/actions/latest-version/action.yml
@@ -24,12 +24,6 @@
 #   # ---> 1.10.13-0
 #   - run: echo ${{ steps.latest-version.outputs.git-describe }}
 #   # ---> 1.10.13-0-g1d2c5aad5
-#
-# Caution: It works smoothly only for 1.10/2.8, but not for 2.10+
-# due to changes in the package versioning (see the new release
-# policy document, [1]).
-#
-# [1]: https://github.com/tarantool/tarantool/discussions/6182
 
 name: 'Latest tarantool version'
 description: 'Get latest tarantool version of given release series'
@@ -80,6 +74,22 @@ runs:
              * parts[5]: '1'
              */
             var parts = v.split(/[.-]/)
+            var major = Number(parts[0])
+            var minor = Number(parts[1])
+
+            /*
+             * Fix version format change after 2.10
+             * due to changes in the package versioning (see the new release
+             * policy document, [1]).
+             *
+             * [1]: https://github.com/tarantool/tarantool/discussions/6182
+             */
+            if (
+              major >= 3 ||
+              (major == 2 && minor >= 10)
+            ) {
+              parts.splice(3, 0, '0');
+            }
 
             var abc = parts.slice(0, 3).join('.')
             var abcd = `${abc}.${parts[3]}`
