bugfix: verify presence of the given version
The action installs tarantool using the following command.

```sh
sudo apt-get install -y tarantool=${version}* tarantool-dev=${version}*
```

If there is no exactly matching version, `apt-get` installs an available
one.

For example, Ubuntu Jammy (22.04) has tarantool-2.6.0 in distro's
repository and an attempt to install a non-existing tarantool version
gives tarantool-2.6.0.

This behavior makes things especially confusing when the `ubuntu-latest`
[runner label][1] changes its meaning. For example, when `ubuntu-latest`
meant Ubuntu Focal (20.04) the action successfully installs
tarantool-1.10.6. Later, `ubuntu-latest` was updated to Ubuntu Jammy
(22.04) and the same action invocation installs 2.6.0, because there is
no 1.10.6 package for Ubuntu Jammy.

After this commit such an update doesn't lead to installation of an
unexpected tarantool version: it leads to an explicit error.

Part of #36

[1]: https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#choosing-github-hosted-runners

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -359,3 +359,23 @@ jobs:
         with:
           tarantool-version: '${{ matrix.tarantool }}'
           from-cache: true
+
+  # There is no 1.10.999 build. Verify that an attempt to install
+  # it fails.
+  test-unknown-version:
+    runs-on: ubuntu-latest
+    env:
+      TARANTOOL_CACHE_KEY_SUFFIX: -H-${{ github.run_id }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Attempt to install 1.10.999 (expect failure)
+        uses: ./
+        with:
+          tarantool-version: '1.10.999'
+        continue-on-error: true
+        id: install
+
+      - name: Verify that the previous step fails
+        run: |
+          [ "${{ steps.install.outcome }}" = "failure" ]
