feature: support tarantool-3
The action needs to handle the following nuances to support the
`series-3` tarantool repository.

* There is no per distribution splitting here: where
  `ubuntu/<...>/jammy` was in the repository URI, it is
  `libux-deb/<...>/static` now.
* The `Packages` metadata file has `Package: tarantool` in a middle of a
  paragraph, not beginning.
* There is no `.gXXXXXXXXXX` part with a git commit hash in the package
  version.

The `test-docker.yml` workflow needs a slight update of the version
check step, because tarantool-3 has no git commit hash in the package
version. A four-digit version check without the hash should be enough.

Fixes #53

--- a/.github/workflows/test-docker.yml
+++ b/.github/workflows/test-docker.yml
@@ -14,6 +14,7 @@ jobs:
           - '1.10'
           - '2.10'
           - '2.11'
+          - '3.0'
 
         image:
           - ubuntu:focal
@@ -21,9 +22,14 @@ jobs:
           - debian:buster
           - debian:bullseye
 
-        # Only 2.11 is available on debian bookworm
         include:
+          # Only 2.11 is available on Debian Bookworm.
           - tarantool: '2.11'
+            image: debian:bookworm
+
+          # 3.0 is delivered as a single package for all the
+          # distributions.
+          - tarantool: '3.0'
             image: debian:bookworm
 
     container:
@@ -81,7 +87,7 @@ jobs:
       - name: Check precise version
         uses: ./.github/actions/verify-version
         with:
-          tarantool-version: '${{ steps.latest-version.outputs.git-describe }}'
+          tarantool-version: '${{ steps.latest-version.outputs.abc-d }}'
           from-cache: false
 
       - name: Uninstall tarantool
@@ -95,5 +101,5 @@ jobs:
       - name: Verify install from cache
         uses: ./.github/actions/verify-version
         with:
-          tarantool-version: '${{ steps.latest-version.outputs.git-describe }}'
+          tarantool-version: '${{ steps.latest-version.outputs.abc-d }}'
           from-cache: true
