ci: get rid of ubuntu-20.04
GitHub doesn't support Ubuntu Focal runners anymore.

https://github.com/actions/runner-images/issues/11101

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [ubuntu-20.04]
+        runs-on: [ubuntu-22.04]
         tarantool:
           - '1.10'
           - '2.4'
@@ -20,16 +20,8 @@ jobs:
           - '2.10'
         nightly: [false]
         include:
-        # We have Ubuntu Jammy (22.04) packages only for 2.10 at
-        # the moment of adding this code. There is commit
-        # 1.10.13-9-g2d23c9d9c, but 1.10.14 is not released yet.
-        # And there is some infrastructure problem with Jammy
-        # packages in the live/1.10 repository.
-        #
-        # Anyway, 2.10 is okay to test the action of Jammy runner,
-        # so just use it.
-        - {runs-on: ubuntu-22.04, tarantool: '2.10', nightly: false}
-        - {runs-on: ubuntu-20.04, tarantool: '1.10', nightly: true}
+        # Nightly build test.
+        - {runs-on: ubuntu-22.04, tarantool: '1.10', nightly: true}
     runs-on: ${{ matrix.runs-on }}
     env:
       TARANTOOL_CACHE_KEY_SUFFIX: -A-${{ github.run_id }}
@@ -71,7 +63,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [ubuntu-20.04, ubuntu-20.04, ubuntu-20.04]
+        runs-on: [ubuntu-24.04, ubuntu-24.04, ubuntu-24.04]
     runs-on: ${{ matrix.runs-on }}
     env:
       TARANTOOL_CACHE_KEY_SUFFIX: -B-${{ github.run_id }}
