--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
   },
   "homepage": "https://github.com/tarantool/setup-tarantool#readme",
   "dependencies": {
-    "@actions/cache": "^3.0.6",
-    "@actions/core": "^1.10.0",
+    "@actions/cache": "^4.0.3",
+    "@actions/core": "^1.11.1",
     "@actions/exec": "^1.1.1",
-    "@actions/github": "^5.1.1",
-    "@actions/http-client": "^2.0.1"
+    "@actions/github": "^6.0.1",
+    "@actions/http-client": "^2.2.3"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.34.0",
-    "prettier": "^2.8.8",
-    "typescript": "^4.9.3"
+    "@types/node": "^24.1.0",
+    "@vercel/ncc": "^0.38.3",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2"
   }
 }
