--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,12 @@ jobs:
           - '2.8'
           - '2.9'
           - '2.10'
+          - '2.11'
+          - '3.0'
+          - '3.1'
+          - '3.2'
+          - '3.3'
+          - '3.4'
         nightly: [false]
         include:
         # Nightly build test.
@@ -42,7 +48,7 @@ jobs:
 
       - uses: ./.github/actions/verify-version
         with:
-          tarantool-version: '${{ steps.latest-version.outputs.git-describe }}'
+          tarantool-version: '${{ steps.latest-version.outputs.abc }}'
           from-cache: false
 
       - name: Uninstall tarantool
@@ -56,7 +62,7 @@ jobs:
 
       - uses: ./.github/actions/verify-version
         with:
-          tarantool-version: '${{ steps.latest-version.outputs.git-describe }}'
+          tarantool-version: '${{ steps.latest-version.outputs.abc }}'
           from-cache: true
 
   test-concurrency:
