--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,7 +69,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [ubuntu-24.04, ubuntu-24.04, ubuntu-24.04]
+        runs-on:
+          - ubuntu-24.04
+          - ubuntu-24.04
+          - ubuntu-24.04
+          - ubuntu-24.04-arm
+          - ubuntu-24.04-arm
+          - ubuntu-24.04-arm
     runs-on: ${{ matrix.runs-on }}
     env:
       TARANTOOL_CACHE_KEY_SUFFIX: -B-${{ github.run_id }}
